--- a/style.css
+++ b/style.css
@@ -1,272 +1,614 @@
-*{
-    margin: 0;
-    padding: 0;
-  }
-  
-  .main{
-    width: 100%;
-    background: linear-gradient(to top, rgba(0,0,0,0.5)50%, rgba(0,0,0,0.5)50%), url(Background.png);
-    background-position: center;
-    background-size: cover;
-  }
-  
-  .navbar{
-    width: 100px;
-    height: 75px;
-    margin: auto;
-  }
-  
-  .icon{
-    width: 200px;
-    float: left;
-    height: 90px;
-  }
-  
-  .logo{
-    color: #0a0a0a;
-    font-size: 35px;
-    font-family: Arial;
-    padding-left: 20px;
-    float: left;
-    padding-top: 10px;
-  }
-  
-  .menu{
-    width: 400px;
-    float: left;
-    height: 70px;
-  }
-  
-  .ul{
-    position: fixed;
-    top: 0%;
-    width: 100%;
-    float:left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .ul li{
-    list-style: none;
-    margin-left: 62px;
-    margin-top: 27px;
-    font-size: 14px;
-  }
-  
-  .ul li a{
-    text-decoration: none;
-    color: #fff;
-    font-family: Arial;
-    font-weight: bold;
-    transition: 0.4s ease-in-out;
-  }
-  
-  .ul li a:hover{
-    color: #0a0a0a;
-  }
-  
-  .search{
-    width: 330px;
-    float: left;
-    margin-left: 270px;
-  }
-  
-  .srch{
-    font-family: 'Times New Roman';
-    width: 200px;
-    height: 40px;
-    background: transparent;
-    border: 1px solid #0a0a0a;
-    margin-top: 13px;
-    color: #fff;
-    border-right: none;
-    font-size: 16px;
-    float: left;
-    padding: 10px;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 5px;
-  }
-  
-  .btn{
-    width: 100px;
-    height: 40px;
-    background: #d7b8e9;
-    border: 2px solid #0a0a0a;
-    margin-top: 13px;
-    color: #0a0a0a;
-    font-size: 15px;
-    border-bottom-right-radius: 5px;
-    border-top-right-radius: 5px;
-  }
-  
-  .btn:focus{
-    outline:none;
-  }
-  
-  .srch:focus{
-    outline:none;
-  }
-  
-  .content{
-    width: 800px;
-    height: auto;
-    margin: auto;
-    color: #0a0a0a;
-    position: absolute;
-    border: 2px solid #0a0a0a;
-    padding: 10px;
-  }
-  
-  .content .par{
-    padding-left: 20px;
-    padding-bottom: 25px;
-    font-family: Arial;
-    letter-spacing: 1.2px;
-    line-height: 30px;
-  }
-  
-  .content h1{
-    font-family: 'Times New Roman';
-    font-size: 50px;
-    padding-left: 20px;
-    margin-top: 9%;
-    letter-spacing: 2px;
-  }
-  
-  .content .cn{
-    width: 160px;
-    height: 40px;
-    background: #d7b8e9;
-    border: none;
-    margin-bottom: 10px;
-    margin-left: 20px;
-    font-size: 18px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: .4s ease;
-  }
-  
-  .content .cn a{
-    text-decoration: none;
-    color: #000;
-    transition: .3s ease;
-  }
-  
-  .cn a:hover{
-    background-color: #fff;
-  }
-  
-  .content span{
-    color: #d7b8e9;
-    font-size: 60px;
-  }
-  
-  .form{
-    width: 250px;
-    height: 350px;
-    background: linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
-    position: absolute;
-    top: -20px;
-    left: 870px;
-    border-radius: 10px;
-    padding: 25px;
-    display: none;
-  }
-  
-  .form h2{
-    width: 220px;
-    font-family: sans-serif;
-    text-align: center;
-    color: #0a0a0a;
-    font-size: 22px;
-    background-color: #d7b8e9;
-    border-radius: 10px;
-    margin: 2px;
-    padding: 8px;
-  }
-  
-  .form input{
-    width: 240px;
-    height: 35px;
-    background: transparent;
-    border-bottom: 1px solid #d7b8e9;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    color: #fff;
-    font-size: 15px;
-    letter-spacing: 1px;
-    margin-top: 30px;
-    font-family: sans-serif;
-  }
-  
-  .form input:focus{
-    outline: none;
-  }
-  
-  ::placeholder{
-    color: #fff;
-    font-family: Arial;
-  }
-  
-  .btnn{
-    width: 240px;
-    height: 40px;
-    background: #d7b8e9;
-    border: none;
-    margin-top: 30px;
-    font-size: 18px;
-    border-radius: 10px;
-    cursor: pointer;
-    color: #0a0a0a;
-    transition: 0.4s ease;
-  }
-  
-  .btnn:hover{
-    background: #fff;
-    color: #0a0a0a;
-  }
-  
-  .btnn a{
-    text-decoration: none;
-    color: #000;
-    font-weight: bold;
-  }
-  
-  .form .link{
-    font-family: Arial;
-    font-size: 17px;
-    margin-top: 20px;
-    text-align: center;
-    color: #0a0a0a;
-  }
-  
-  .form .link a{
-    text-decoration: none;
-    color: #d7b8e9;
-  }
-  
-  .liw{
-    padding-top: 15px;
-    padding-bottom: 10px;
-    text-align: center;
-  }
-  
-  .icons a{
-    text-decoration: none;
-    color: #fff;
-  }
-  
-  .icons ion-icon{
-    color: #fff;
-    font-size: 20px;
-    padding-left: 14px;
-    padding-top: 5px;
-    transition: 0.3s ease;
-  }
-  
-  .icons ion-icon:hover{
-    color: #0a0a0a;
-  }
-    
+html {
+  height: 100%;
+  width: 100%;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  font-family: 'Josefin Sans', sans-serif;
+  box-sizing: border-box;
+}
+
+
+:root{
+  --primary-image: url(background.JPG);
+  --primary-color: #E6e6fa;
+  --secondary-image: black;
+}
+
+.dark-theme{
+  --primary-image: url(Dark\ background.png);
+  --primary-color: #070709;
+  --secondary-image: white;
+}
+
+
+.hero {
+  height: 100vh;
+  width: 100%;
+  background-image: var(--primary-image);
+  background-size: cover;
+  background-position: center;
+}
+
+.hero img {
+  height: auto;
+  width: 100px;
+}
+
+.small{
+  height: 10vh;
+  width: 100%;
+  background-image: white;
+  background-size: cover;
+  background-position: center;
+}
+
+.small img {
+  height: auto;
+  width: 100px;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 45px;
+  padding-left: 8%;
+  padding-right: 8%;
+}
+
+span {
+  color: #383F51;
+}
+
+nav ul li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 10px 25px;
+}
+
+nav ul li a {
+  color: var(--secondary-image);
+  text-decoration: none;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+
+nav ul li a:hover {
+  color: #E6e6fa;
+  transition: .3s;
+}
+
+.btn {
+  background-color: #E6e6fa;
+  color: black;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 10px 25px;
+  border-radius: 30px;
+  transition: transform .4s;
+}
+
+.btn:hover {
+  transform: scale(1.2);
+}
+
+
+.switch {
+  position: relative;
+  height: 1.5rem;
+  width: 3rem;
+  cursor: pointer;
+  appearance: none;
+  -webkit-appearance: none;
+  border-radius: 9999px;
+  background-color: rgba(100, 116, 139, 0.377);
+  transition: all .3s ease;
+}
+
+.switch:checked {
+  background-color: rgba(230, 230, 250, 1);
+}
+
+.switch::before {
+  position: absolute;
+  content: "";
+  left: calc(1.5rem - 1.6rem);
+  top: calc(1.5rem - 1.6rem);
+  display: block;
+  height: 1.6rem;
+  width: 1.6rem;
+  cursor: pointer;
+  border: 1px solid rgba(100, 116, 139, 0.527);
+  border-radius: 9999px;
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0 3px 10px rgba(100, 116, 139, 0.327);
+  transition: all .3s ease;
+}
+
+.switch:hover::before {
+  box-shadow: 0 0 0px 8px rgba(0, 0, 0, .15)
+}
+
+.switch:checked:hover::before {
+  box-shadow: 0 0 0px 8px rgb(230, 230, 250, .15)
+}
+
+.switch:checked:before {
+  transform: translateX(100%);
+  border-color: rgba(230, 230, 250, 1);
+}
+
+
+.content {
+  position: absolute;
+  top: 50%;
+  left: 8%;
+  transform: translateY(-50%);
+}
+
+h1 {
+  color: var(--secondary-image);
+  font-size: 35px;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+
+h3 {
+  color: var(--secondary-image);
+  font-size: 25px;
+  margin-bottom: 50px;
+}
+
+h4 {
+  color: var(--secondary-image);
+  letter-spacing: 2px;
+  font-size: 20px;
+}
+
+.register-btn {
+  background-color: #0a0a0a;
+  color: #E6e6fa;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 10px 25px;
+  border-radius: 30px;
+  transition: transform .4s;
+}
+
+.register-btn:hover {
+  transform: scale(1.2);
+}
+
+.login-box {
+  position: relative;
+  width: 500px;
+  height: 500px;
+  background: #E6e6fa;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  backdrop-filter: blur(15px);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 40%;
+}
+
+.login-box .form {
+  width: 100%;
+  padding: 40px;
+}
+
+.register{
+  position: relative;
+  width: 750px;
+  height: 600px;
+  background: #E6e6fa;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  backdrop-filter: blur(15px);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 40%;
+}
+
+.login-box h2 {
+  font-size: 2em;
+  color: #0a0a0a;
+  text-align: center;
+}
+
+.input-box {
+  position: relative;
+  width: 100%;
+  height: 50px;
+  border-bottom: 2px solid #0a0a0a;
+  margin: 30px 0;
+}
+
+.input-box label {
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  font-size: 1em;
+  color: #0a0a0a;
+  font-weight: 500;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.input-box input:focus~label,
+.input-box input:valid~label {
+  top: -5px;
+}
+
+.input-box input {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 1em;
+  color: #0a0a0a;
+  font-weight: 600;
+  padding: 0 35px 0 5px;
+}
+
+.input-box .i {
+  position: absolute;
+  right: 8px;
+  color: #0a0a0a;
+  font-size: 1.2em;
+  top: 50%;
+}
+
+.register {
+  background: #E6e6fa;
+  position: absolute;
+  right: 8px;
+  font-size: 1.2em;
+  color: #E6e6fa;
+  line-height: 57px;
+}
+
+.remember-forgot {
+  font-size: .9emm;
+  color: #0a0a0a;
+  font-weight: 500;
+  margin: -15px 0 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.remember-forgot label input {
+  accent-color: black;
+  margin-right: 3px;
+}
+
+.remember-forgot a {
+  color: #800080;
+  text-decoration: none;
+}
+
+.remember-forgot a:hover {
+  text-decoration: underline;
+}
+
+.register {
+  font-size: .9emm;
+  color: #0a0a0a;
+  text-align: center;
+  font-weight: 500;
+  margin: 25px 0 10px;
+}
+
+.register p a {
+  color: #0a0a0a;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.register p a:hover {
+  text-decoration: underline;
+}
+
+.login-box .i {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 45px;
+  height: 45px;
+  color: black;
+  background: #E6e6fa;
+  font-size: 2em;
+  display: flex;
+  border-bottom-left-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+
+.about {
+  width: 100%;
+  padding: 100px 0px;
+  background-image: var(--primary-image);
+  background-size: cover;
+  background-position: center;
+}
+
+.about img {
+  height: auto;
+  width: 880px;
+}
+
+.about text {
+  width: 550px;
+}
+
+.main {
+  width: 1130px;
+  max-width: 95%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.about-text h3 {
+  color: var(--secondary-image);
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+
+.about-text h4 {
+  color: var(--secondary-image);
+  letter-spacing: 2px;
+  font-size: 20px;
+  margin-bottom: 20px;
+  text-transform: capitalize;
+}
+
+
+.vacancies {
+  width: 100%;
+  padding: 100px 0px;
+  background-image: var(--primary-image);
+  background-size: cover;
+  background-position: center;
+}
+
+.v-box {
+  display: inline-block;
+  justify-content: left;
+  align-items: left;
+  min-height: 400px;
+}
+
+.v-card {
+  height: 230px;
+  width: 900px;
+  padding: 20px 35px;
+  background: #E6e6fa;
+  border-radius: 20px;
+  margin: 15px;
+  position: relative;
+  overflow: hidden;
+  text-align: left;
+}
+
+.v-card .button {
+  background-color: black;
+  color: white;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 9px 22px;
+  border-radius: 30px;
+  transition: .4s;
+}
+
+.v-card .button:hover {
+  background-color: transparent;
+  border: 2px solid black;
+  cursor: pointer;
+}
+
+.apply{
+  background-color: #E6e6fa;
+  color: black;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 9px 22px;
+  border-radius: 30px;
+  transition: .4s;
+}
+
+.contact-us {
+  width: 100%;
+  padding: 100px 0px;
+  background-image: var(--primary-image);
+  background-size: cover;
+  background-position: center;
+}
+
+.c-box {
+  display: flex;
+  justify-content: left;
+  align-items: left;
+  min-height: 400px;
+}
+
+.c-card {
+  height: 230px;
+  width: 330px;
+  padding: 20px 35px;
+  background: #E6e6fa;
+  border-radius: 20px;
+  margin: 15px;
+  position: relative;
+  overflow: hidden;
+  text-align: left;
+}
+
+.contact-us .button {
+  background-color: #E6e6fa;
+  color: black;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 9px 22px;
+  border-radius: 30px;
+  transition: .4s;
+}
+
+.contact-us .button:hover {
+  background-color: transparent;
+  border: 2px solid black;
+  cursor: pointer;
+}
+
+
+.courses {
+  background-image: var(--primary-image);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  padding: 100px 0px;
+}
+
+.title h2 {
+  color: var(--secondary-image);
+  font-size: 50px;
+  width: 1000px;
+  margin: 30px auto;
+  text-align: center;
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 530px;
+}
+
+.card {
+  height: 430px;
+  width: 430px;
+  padding: 20px 35px;
+  background: #E6e6fa;
+  border-radius: 20px;
+  margin: 15px;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+}
+
+.card i {
+  font-size: 20px;
+  display: block;
+  text-align: center;
+  margin: 0px 0px;
+  color: #0a0a0a;
+}
+
+.courses img {
+  height: 100px;
+  width: 100px;
+}
+
+h5 {
+  color: black;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.pra p {
+  color: black;
+  font-size: 12px;
+  line-height: 27px;
+  margin-bottom: 25px;
+}
+
+.card .button {
+  background-color: black;
+  color: white;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 9px 22px;
+  border-radius: 30px;
+  transition: .4s;
+}
+
+.card .button:hover {
+  background-color: transparent;
+  border: 2px solid black;
+  cursor: pointer;
+}
+
+footer {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background: var(--primary-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+footer p:nth-child(1) {
+  font-size: 30px;
+  color: var(--secondary-image);
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+footer p:nth-child(2) {
+  color: var(--secondary-image);
+  font-size: 17px;
+  width: 500px;
+  text-align: center;
+  line-height: 26px;
+}
+
+.social {
+  display: flex;
+}
+
+.social a {
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--primary-color);
+  border-radius: 50%;
+  margin: 22px 10px;
+  color: var(--secondary-image);
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.social a:hover {
+  transform: scale(1.3);
+  transition: .3s;
+}
+
+.end {
+  position: absolute;
+  color: var(--secondary-image);
+  bottom: 35px;
+  font-size: 14px;
+}
